Added Luhn global (#11)